feat(docs): Handlers se han documentado correctamente por medio de swagger
