# backend/internal/adapters/handlers/create_campaign.go
@@ -8,6 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// CreateCampaign godoc
+// @Summary      Crear nueva campaña
+// @Description  Endpoint to create a new marketing campaign for a business. Requires campaign details in the request body.
+// @Tags         Campaigns
+// @Accept       json
+// @Produce      json
+// @Param        campaign body request.CreateCampaign true "Campaign data"
+// @Success      200
+// @Router       /campaigns [post]
 func (h *Handler) CreateCampaign(c *gin.Context) {
 	ctx := utils.GetCtxByGin(c)
 	var requestData request.CreateCampaign
