# backend/internal/adapters/handlers/obtain_branches.go
@@ -8,6 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ObtainBranches	godoc
+// @Summary			Obtener sucursales de comercio
+// @Description		Recuperar las sucursales asociadas a una empresa específica.
+// @Param			tax_id query int true "ID tributario de la empresa"
+// @Produce			application/json
+// @Tags			Branches
+// @Success			200
+// @Router			/branches [get]
 func (h *Handler) ObtainBranches(c *gin.Context) {
 	ctx := utils.GetCtxByGin(c)
 	idParam := c.Query("tax_id")
