# backend/internal/adapters/handlers/obtain_campaign.go
@@ -8,6 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ObtainCampaign	godoc
+// @Summary			Obtener campañas de comercio
+// @Description		Recuperar las campañas asociadas a una empresa específica.
+// @Param			tax_id query int true "ID tributario de la empresa"
+// @Produce			application/json
+// @Tags			Campaigns
+// @Success			200
+// @Router			/campaigns [get]
 func (h *Handler) ObtainCampaign(c *gin.Context) {
 	ctx := utils.GetCtxByGin(c)
 	idParam := c.Query("tax_id")
